fix overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,7 @@ body {
   font-family: "Quicksand", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, sans-serif;
   height: 100%;
+  overflow-x: hidden;
 }
 
 .scroll-hidden::-webkit-scrollbar {
@@ -152,6 +153,7 @@ input:focus {
   visibility: hidden;
   transform: translateY(16px);
   transition: all 0.3s ease;
+  z-index: 9999;
   box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2);
 }
 .chev-down {
